<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Cadastro de Alunos</string>
    <string name="form_name">Name:</string>
    <string name="form_phone">Telefone:</string>
    <string name="form_website">Site:</string>
    <string name="form_rate">Nota:</string>
    <string name="form_insert_btn">Inserir</string>
    <string name="form_address">Endereço:</string>
    <string name="form_name_hint">Digite seu nome aqui</string>
    <string name="form_phone_hint">(99) 9999-9999</string>
    <string name="form_address_hint">Digite seu endereço aqui</string>
    <string name="form_website_hint">http://</string>
    <string name="item_photo_description">Foto do Aluno</string>
    <string name="menu_new">Novo</string>
    <string name="menu_sycronize">Sincronizar</string>
    <string name="menu_galery">Galeria</string>
    <string name="menu_map">Mapa</string>
    <string name="submenu_call">Ligar</string>
    <string name="submenu_sms">Enviar SMS</string>
    <string name="submenu_find_map">Achar no mapa</string>
    <string name="submenu_website">Navegar no site</string>
    <string name="submenu_remove">Excluir</string>
    <string name="submenu_send_email">Enviar E-Mail</string>
    <string name="submenu_share">Compartilhar</string>
    <string name="ordemAlfabetica">Ordem alfabética</string>
    <string name="btn_save">Salvar</string>
    <string name="menu_preferences">Preferencias</string>
</resources>
