<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+formulario/foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon" >
        </ImageButton>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_name" >
        </TextView>

        <EditText
            android:id="@+formulario/nome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_name_hint"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_phone" >
        </TextView>

        <EditText
            android:id="@+formulario/telefone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_phone_hint"
            android:inputType="phone"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_address" >
        </TextView>

        <EditText
            android:id="@+formulario/endereco"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_address_hint"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_website" >
        </TextView>

        <EditText
            android:id="@+formulario/site"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_website_hint"
            android:inputType="textWebEditText"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_rate" >
        </TextView>

        <br.com.caelum.cadastro.custom.Indicator
            android:id="@+formulario/indicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             />
        
        <Button
            android:id="@+formulario/btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_insert_btn" />
    </LinearLayout>

</ScrollView>